build/log/idf_py_stdout_output_4237
[1/10] Performing build step for 'bootloader'
[1/1] cd /ESP32-LoRaMac-node/build/bootloader/esp-idf/esptool_py && /opt/esp/python_env/idf5.0_py3.8_env/bin/python /opt/esp/idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /ESP32-LoRaMac-node/build/bootloader/bootloader.bin
Bootloader binary size 0x6700 bytes. 0x900 bytes (8%) free.
[2/8] Building C object esp-idf/Loramac/CMakeFiles/__idf_Loramac.dir/boards/ESP32/sx1276-board.c.obj
FAILED: esp-idf/Loramac/CMakeFiles/__idf_Loramac.dir/boards/ESP32/sx1276-board.c.obj 
ccache /opt/esp/tools/xtensa-esp32-elf/esp-2022r1-11.2.0/xtensa-esp32-elf/bin/xtensa-esp32-elf-gcc -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -I/ESP32-LoRaMac-node/build/config -I/ESP32-LoRaMac-node/components/Loramac/boards -I/ESP32-LoRaMac-node/components/Loramac/boards/ESP32 -I/ESP32-LoRaMac-node/components/Loramac/mac -I/ESP32-LoRaMac-node/components/Loramac/mac/region -I/ESP32-LoRaMac-node/components/Loramac/peripherals -I/ESP32-LoRaMac-node/components/Loramac/radio -I/ESP32-LoRaMac-node/components/Loramac/radio/sx1276 -I/ESP32-LoRaMac-node/components/Loramac/system -I/opt/esp/idf/components/newlib/platform_include -I/opt/esp/idf/components/freertos/FreeRTOS-Kernel/include -I/opt/esp/idf/components/freertos/esp_additions/include/freertos -I/opt/esp/idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/opt/esp/idf/components/freertos/esp_additions/include -I/opt/esp/idf/components/esp_hw_support/include -I/opt/esp/idf/components/esp_hw_support/include/soc -I/opt/esp/idf/components/esp_hw_support/include/soc/esp32 -I/opt/esp/idf/components/esp_hw_support/port/esp32/. -I/opt/esp/idf/components/esp_hw_support/port/esp32/private_include -I/opt/esp/idf/components/heap/include -I/opt/esp/idf/components/log/include -I/opt/esp/idf/components/soc/include -I/opt/esp/idf/components/soc/esp32/. -I/opt/esp/idf/components/soc/esp32/include -I/opt/esp/idf/components/hal/esp32/include -I/opt/esp/idf/components/hal/include -I/opt/esp/idf/components/hal/platform_port/include -I/opt/esp/idf/components/esp_rom/include -I/opt/esp/idf/components/esp_rom/include/esp32 -I/opt/esp/idf/components/esp_rom/esp32 -I/opt/esp/idf/components/esp_common/include -I/opt/esp/idf/components/esp_system/include -I/opt/esp/idf/components/esp_system/port/soc -I/opt/esp/idf/components/esp_system/port/include/private -I/opt/esp/idf/components/xtensa/include -I/opt/esp/idf/components/xtensa/esp32/include -I/opt/esp/idf/components/lwip/include -I/opt/esp/idf/components/lwip/include/apps -I/opt/esp/idf/components/lwip/include/apps/sntp -I/opt/esp/idf/components/lwip/lwip/src/include -I/opt/esp/idf/components/lwip/port/esp32/include -I/opt/esp/idf/components/lwip/port/esp32/include/arch -I/opt/esp/idf/components/driver/include -I/opt/esp/idf/components/driver/deprecated -I/opt/esp/idf/components/driver/esp32/include -I/opt/esp/idf/components/esp_pm/include -I/opt/esp/idf/components/esp_ringbuf/include -I/opt/esp/idf/components/esp_timer/include -mlongcalls -Wno-frame-address  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=/ESP32-LoRaMac-node=. -fmacro-prefix-map=/opt/esp/idf=/IDF -fstrict-volatile-bitfields -Wno-error=unused-but-set-variable -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -D_GNU_SOURCE -DIDF_VER=\"v5.0.2\" -DESP_PLATFORM -D_POSIX_READER_WRITER_LOCKS -MD -MT esp-idf/Loramac/CMakeFiles/__idf_Loramac.dir/boards/ESP32/sx1276-board.c.obj -MF esp-idf/Loramac/CMakeFiles/__idf_Loramac.dir/boards/ESP32/sx1276-board.c.obj.d -o esp-idf/Loramac/CMakeFiles/__idf_Loramac.dir/boards/ESP32/sx1276-board.c.obj -c /ESP32-LoRaMac-node/components/Loramac/boards/ESP32/sx1276-board.c
/ESP32-LoRaMac-node/components/Loramac/boards/ESP32/sx1276-board.c: In function 'SX1276IoInit':
/ESP32-LoRaMac-node/components/Loramac/boards/ESP32/sx1276-board.c:81:35: error: 'RADIO_RST' undeclared (first use in this function); did you mean 'RADIO_NSS'?
   81 |     io_conf.pin_bit_mask = (1ULL<<RADIO_RST);
      |                                   ^~~~~~~~~
      |                                   RADIO_NSS
/ESP32-LoRaMac-node/components/Loramac/boards/ESP32/sx1276-board.c:81:35: note: each undeclared identifier is reported only once for each function it appears in
ninja: build stopped: subcommand failed.
